Import mapping UI: don't generate all select elements on page init (part 2)

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1578,3 +1578,36 @@ table.payment-method-features td {
 	display: inline-block; 
 	margin-left: 10px;
 }
+
+
+/* Import column mapping
+-------------------------------------------------------------- */
+.column-mapping {
+	.column-one, .column-two {
+		width: 38%;
+	}
+
+	.select-property, .select-column, .input-default {
+		width: 98%;
+	}
+
+	.mapping-item {
+		.item-inner {
+			cursor: pointer;
+			padding: 7px 0;
+
+			.property-icon {
+				display: inline-block;
+				margin-right: 0;
+			}
+			.left-label {
+				display: inline-block;
+			}
+			.right-label {
+				float: right;
+				font-size: 0.9em;
+				margin-right: 20px;
+			}
+		}
+	}
+}
