--- a/src/Presentation/SmartStore.Web/Administration/Views/Import/_ColumnMappings.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Import/_ColumnMappings.cshtml
@@ -32,7 +32,7 @@
 	</table>
 </div>
 
-<div id="MappingTemplateProperty" class="hide">
+<div id="PropertyMappingTemplate" class="hide">
 	<div class="mapping-edit">
 		<select class="select-property noskin" data-placeholder="@selectTargetProperty" style="width: 550px;">
 			<option></option>
@@ -46,13 +46,13 @@
 	</div>
 </div>
 
-<div id="MappingTemplateColumn" class="hide">
+<div id="ColumnMappingTemplate" class="hide">
 	<div class="mapping-edit">
 		<select class="select-column noskin" data-placeholder="@ignore" style="width: 550px;">
 			<option></option>
 			@foreach (var column in Model.AvailableSourceColumns)
 			{
-				<option value="@column.Column">@column.ColumnLocalized</option>
+				<option value="@column.Column">@column.PropertyDescription</option>
 			}
 		</select>
 		<button type="button" class="btn btn-primary mapping-apply"><i class="fa fa-check"></i></button>
@@ -60,7 +60,7 @@
 	</div>
 </div>
 
-<div id="MappingAddTemplate" class="hide">
+<div id="AddMappingTemplate" class="hide">
 	<table>
 		<tbody>
 			<tr class="column-mapping-new">
@@ -93,7 +93,7 @@
 							<option></option>
 							@foreach (var column in Model.AvailableSourceColumns)
 							{
-								<option value="@column.Column">@column.ColumnLocalized</option>
+								<option value="@column.Column">@column.PropertyDescription</option>
 							}
 						</select>
 					</div>
@@ -134,17 +134,18 @@
 							<input type="hidden" name="ColumnMapping.Property.@(index)" value="@mapping.Property" />
 							<div class="item-inner">
 								<span class="property-icon">
-									<i class="text-success fa fa-fw @(mapping.Column.EmptyNull().EndsWith("]") ? "fa-globe" : "fa-chain-broken")"></i>
+									<i class="text-success fa fa-fw @(mapping.Property.EmptyNull().EndsWith("]") ? "fa-globe" : "fa-chain-broken")"></i>
 								</span>
-								@if (mapping.Text.Length > 50)
+								@if (mapping.PropertyDescription.Length > 50)
 								{
-									<span class="left-label" title="@mapping.Text">@(mapping.Text.Substring(0, 50))…</span>
+									<span class="left-label" title="@mapping.PropertyDescription">@(mapping.PropertyDescription.Substring(0, 50))…</span>
 								}
 								else
 								{
-									<span class="left-label">@mapping.Text</span>
+									<span class="left-label">@mapping.PropertyDescription</span>
 								}
-								<span class="muted right-label">@mapping.Column</span>
+								@*<span class="muted right-label">@(mapping.Column.HasValue() ? mapping.Column : mapping.Property)</span>*@
+								<span class="muted right-label">@mapping.Property</span>
 							</div>
 						</div>
 					</td>
@@ -152,20 +153,22 @@
 						<div class="mapping-item mapping-column">
 							<input type="hidden" name="ColumnMapping.Column.@(index)" value="@mapping.Column" />
 							<div class="item-inner">
-								@*TODO: display ignored properties in a multi-select on top of mapping table. user must be able to revise the ignoring.*@
-								@if (mapping.Column.HasValue())
-								{
-									<span class="left-label">@mapping.Column</span>
-								}
-								else
-								{
-									<span class="left-label muted">@ignore</span>
-								}
+								<span class="left-label">
+									@if (mapping.Column.HasValue())
+									{
+										@mapping.Column
+									}
+									else
+									{
+										<span class="muted">@ignore</span>
+									}
+								</span>
 							</div>
 						</div>
 					</td>
 					<td>
-						<input type="text" name="ColumnMapping.Default.@(index)" class="input-default text-box single-line" value="@mapping.Default" />
+						<input type="text" name="ColumnMapping.Default.@(index)" class="input-default text-box single-line" value="@mapping.Default" 
+							   @Html.Attr("disabled", "disabled", mapping.IsDefaultDisabled) />
 					</td>
 					<td>
 						<button type="button" class="btn btn-block btn-danger mapping-delete">
