--- a/src/Presentation/SmartStore.Web/Administration/Views/Import/_ColumnMappings.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Import/_ColumnMappings.cshtml
@@ -34,11 +34,10 @@
 
 <div id="PropertyMappingTemplate" class="hide">
 	<div class="mapping-edit">
-		<select class="select-property noskin" data-placeholder="@selectTargetProperty" style="width: 550px;">
-			<option></option>
+		<select class="select-property noskin" style="width: 550px;">
 			@foreach (var property in Model.AvailableEntityProperties)
 			{
-				<option value="@property.Value">@property.Text</option>
+				<option value="@property.Property" data-defaultdisabled="@(property.IsDefaultDisabled ? "1" : "0")">@property.PropertyDescription</option>
 			}
 		</select>
 		<button type="button" class="btn btn-primary mapping-apply"><i class="fa fa-check"></i></button>
@@ -78,7 +77,7 @@
 							<option></option>
 							@foreach (var property in Model.AvailableEntityProperties)
 							{
-								<option value="@property.Value">@property.Text</option>
+								<option value="@property.Property" data-defaultdisabled="@(property.IsDefaultDisabled ? "1" : "0")">@property.PropertyDescription</option>
 							}
 						</select>
 					</div>
@@ -99,7 +98,7 @@
 					</div>
 				</td>
 				<td>
-					<input type="text" class="input-default text-box single-line" value="" />
+					<input type="text" class="input-default text-box single-line" value="" disabled="disabled" />
 				</td>
 				<td>
 					<button type="button" class="btn btn-block btn-warning mapping-add" disabled="disabled">
@@ -144,7 +143,6 @@
 								{
 									<span class="left-label">@mapping.PropertyDescription</span>
 								}
-								@*<span class="muted right-label">@(mapping.Column.HasValue() ? mapping.Column : mapping.Property)</span>*@
 								<span class="muted right-label">@mapping.Property</span>
 							</div>
 						</div>
@@ -168,7 +166,7 @@
 					</td>
 					<td>
 						<input type="text" name="ColumnMapping.Default.@(index)" class="input-default text-box single-line" value="@mapping.Default" 
-							   @Html.Attr("disabled", "disabled", mapping.IsDefaultDisabled) />
+							   @Html.Attr("disabled", "disabled", mapping.IsDefaultDisabled || !mapping.Column.HasValue()) />
 					</td>
 					<td>
 						<button type="button" class="btn btn-block btn-danger mapping-delete">
