--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/product.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/product.less
@@ -401,7 +401,9 @@
 }
 
 .attributes .image-has-value {
-    margin-left: 28px;
+    margin-left: 8px;
+    vertical-align: top;
+    display: inline-block;
 }
 
 .mb-bundle-pictures .fa-plus {
@@ -409,8 +411,7 @@
 }
 
 .mb-bundle-pictures a,
-.mb-bundle-pictures i,
-.attributes .attribute-value-image-checkbox {
+.mb-bundle-pictures i {
     float: left;
 }
 
