Refactored last commit

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/product.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/product.less
@@ -395,24 +395,27 @@
     border-top: none !important;
 }
 
+.attributes .image-has-value {
+    display: table-cell;
+    padding-top: 10px;
+}
+
 .attribute-value-image {
 	margin-right: 5px;
 	vertical-align: middle;
 }
-
-.attributes .image-has-value {
-    margin-left: 8px;
-    vertical-align: top;
-    display: inline-block;
-}
-
 .mb-bundle-pictures .fa-plus {
     padding: 4px 10px 0 10px;
 }
 
 .mb-bundle-pictures a,
-.mb-bundle-pictures i {
+.mb-bundle-pictures i,
+.attributes .attribute-value-image-checkbox {
     float: left;
+}
+.attributes .attribute-value-image-checkbox {
+    margin-right: 10px;
+    padding-top: 10px;
 }
 
 .mb-bundle-pictures img {
