--- a/src/Presentation/SmartStore.Web/Views/Product/_Attributes.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/_Attributes.cshtml
@@ -37,70 +37,52 @@
                 {
                     case AttributeControlType.DropdownList:
                         {
-                    <select name="@(controlId)" id="@(controlId)" style="width:100%"@(Html.Raw(disabled))>
-                        @if (!attribute.IsRequired)
-                        {
-                            <option value="0">@T("Common.Unspecified")</option>
-						}
-						else if (attribute.Values.Count > 0 && !attribute.Values.Any(x => x.IsPreSelected))
-						{
-							<option value="0">@T("Common.PleaseSelect")</option>
-						}
-                        @foreach (var pvaValue in attribute.Values)
-                        {
-                            <option value="@pvaValue.Id" @Html.Attr("selected", "selected", pvaValue.IsPreSelected) @Html.Attr("data-imageurl", pvaValue.ImageUrl, pvaValue.ImageUrl.HasValue())>@(pvaValue.Name)@(pvaValue.GetAttributeValueInfo())</option>
-                        }
-                    </select>
+                            <select name="@(controlId)" id="@(controlId)" style="width:100%"@(Html.Raw(disabled))>
+                                @if (!attribute.IsRequired)
+                                {
+                                    <option value="0">@T("Common.Unspecified")</option>
+						        }
+						        else if (attribute.Values.Count > 0 && !attribute.Values.Any(x => x.IsPreSelected))
+						        {
+							        <option value="0">@T("Common.PleaseSelect")</option>
+						        }
+                                @foreach (var pvaValue in attribute.Values)
+                                {
+                                    <option value="@pvaValue.Id" @Html.Attr("selected", "selected", pvaValue.IsPreSelected) @Html.Attr("data-imageurl", pvaValue.ImageUrl, pvaValue.ImageUrl.HasValue())>@(pvaValue.Name)@(pvaValue.GetAttributeValueInfo())</option>
+                                }
+                            </select>
                         }
                         break;
                     case AttributeControlType.RadioList:
-                        {
-                            foreach (var pvaValue in attribute.Values)
-                            {
-                                if (pvaValue.ImageUrl.HasValue())
-                                {
-                                    if (!String.IsNullOrEmpty(pvaValue.SeName))
-                                    { 
-                                        <a href="@Url.RouteUrl("Product", new { SeName = pvaValue.SeName })" class="attribute-value-image-checkbox">
-                                            <img src="@(pvaValue.ImageUrl)" />
-                                        </a>
-                                    }
-                                    else
-                                    {
-                                        <img src="@(pvaValue.ImageUrl)" class="attribute-value-image-checkbox" />
-                                    }
-                                }
-
-                                <label for="@(controlId)_@(pvaValue.Id)" class="radio @(pvaValue.ImageUrl.HasValue() ? "image-has-value" : "")">
-									<input id="@(controlId)_@(pvaValue.Id)" type="radio" name="@(controlId)" value="@pvaValue.Id" @Html.Attr("checked", "checked", pvaValue.IsPreSelected)@(Html.Raw(disabled)) />
-                                        @(pvaValue.Name)@(pvaValue.GetAttributeValueInfo())
-                                </label>
-                            }
-
-                        }
-                        break;
                     case AttributeControlType.Checkboxes:
                         {
                             foreach (var pvaValue in attribute.Values)
                             {
-                                if (pvaValue.ImageUrl.HasValue())
-                                {
-                                    if (!String.IsNullOrEmpty(pvaValue.SeName))
-                                    { 
-                                        <a href="@Url.RouteUrl("Product", new { SeName = pvaValue.SeName })" class="attribute-value-image-checkbox">
-                                            <img src="@(pvaValue.ImageUrl)" />
-                                        </a>
-                                    }
-                                    else
+                                var inputType = attribute.AttributeControlType == AttributeControlType.RadioList ? "radio" : "checkbox";
+
+                                <div class="clearfix">
+                                    @if (pvaValue.ImageUrl.HasValue())
                                     {
-                                        <img src="@(pvaValue.ImageUrl)" class="attribute-value-image-checkbox" />
+                                        if (!String.IsNullOrEmpty(pvaValue.SeName))
+                                        {
+                                            <a href="@Url.RouteUrl("Product", new { SeName = pvaValue.SeName })" class="attribute-value-image-checkbox">
+                                                <img src="@(pvaValue.ImageUrl)" />
+                                            </a>
+                                        }
+                                        else
+                                        {
+                                            <img src="@(pvaValue.ImageUrl)" class="attribute-value-image-checkbox" />
+                                        }
                                     }
-                                }
-                                
-                                <label for="@(controlId)_@(pvaValue.Id)" class="checkbox @(pvaValue.ImageUrl.HasValue() ? "image-has-value" : "")">
-									<input id="@(controlId)_@(pvaValue.Id)" type="checkbox" name="@(controlId)" value="@pvaValue.Id" @Html.Attr("checked", "checked", pvaValue.IsPreSelected)@(Html.Raw(disabled)) />
-                                    @(pvaValue.Name)@(pvaValue.GetAttributeValueInfo())
-                                </label>
+
+                                    <label for="@(controlId)_@(pvaValue.Id)" class="@inputType @(pvaValue.ImageUrl.HasValue() ? "image-has-value" : "")">
+                                        <input id="@(controlId)_@(pvaValue.Id)" type="@inputType" name="@(controlId)" value="@pvaValue.Id" @Html.Attr("checked", "checked", pvaValue.IsPreSelected) @(Html.Raw(disabled)) />
+                                        @(pvaValue.Name)
+                                        <span class="nobr">
+                                            @(pvaValue.GetAttributeValueInfo())
+                                        </span>
+                                    </label>
+                                </div>
                             }
                         }
                         break;
