--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -618,7 +618,7 @@
 			</td>
 			<td class="adminData">
 				@Html.EditorFor(model => model.SampleDownloadId)
-				@*@Html.ValidationMessageFor(model => model.SampleDownloadId)*@
+				@Html.ValidationMessageFor(model => model.SampleDownloadId)
 			</td>
 		</tr>
 	</table>
