--- a/src/Presentation/SmartStore.Web/Views/Customer/Orders.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Orders.Mobile.cshtml
@@ -1,11 +1,10 @@
-﻿@model CustomerOrderListModel
+﻿@using SmartStore.Web.Models.Customer;
+@model CustomerOrderListModel
 @{
     Layout = "~/Views/Shared/_Root.cshtml";
 
-    //title
     Html.AddTitleParts(T("PageTitle.Account").Text);
 }
-@using SmartStore.Web.Models.Customer;
 <div class="page account-page order-list-page">
     <div class="page-title">
         <h1>@T("Account.CustomerOrders")</h1>
@@ -66,6 +65,7 @@
             </div>
             }
         }
+
         <div class="order-list">
             @if (Model.Orders.Count > 0)
             {
@@ -103,5 +103,7 @@
                 @T("Account.CustomerOrders.NoOrders")
             }
         </div>
+
+		@Html.SmartStore().Pager(Model.Orders).Name("orders-paginator").Action("Orders", "Customer")
     </div>
 </div>
