--- a/src/Presentation/SmartStore.Web/Views/Customer/Orders.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Orders.cshtml
@@ -1,11 +1,10 @@
-﻿@model CustomerOrderListModel
+﻿@using SmartStore.Web.Models.Customer;
+@model CustomerOrderListModel
 @{
     Layout = "~/Views/Shared/_ColumnsTwo.cshtml";
 
-    //title
     Html.AddTitleParts(T("PageTitle.Account").Text);
 }
-@using SmartStore.Web.Models.Customer;
 @section left
 {
     @Html.Partial("MyAccountNavigation", Model.NavigationModel, new ViewDataDictionary())
@@ -19,7 +18,6 @@
     <div class="page-body">
         @if (Model.RecurringOrders.Count > 0)
         {
-
             using (Html.BeginForm())
             {
             <div class="recurring-payments">
@@ -106,46 +104,47 @@
                 </div>
             }
         }
+
+		@if (Model.Orders.Count == 0)
+		{
+			<div class="alert alert-info">
+				@T("Account.CustomerOrders.NoOrders")
+			</div>
+		}
+
         <div class="order-list">
-            @if (Model.Orders.Count > 0)
-            {
-                foreach (var order in Model.Orders)
-                {
-                <fieldset class="order-item clearfix">
-                    <legend class="title">@T("Account.CustomerOrders.OrderNumber"): @order.OrderNumber</legend>
-                    <div class="info pull-left">
-                        <dl class="dl-horizontal" style="margin-top: 0">
-                          <dt>@T("Account.CustomerOrders.OrderStatus"):</dt>
-                          <dd>@order.OrderStatus</dd>
-                          <dt>@T("Account.CustomerOrders.OrderDate"):</dt>
-                          <dd>@order.CreatedOn.ToString()</dd>
-                          <dt>@T("Account.CustomerOrders.OrderTotal"):</dt>
-                          <dd>@order.OrderTotal</dd>
-                        </dl>
-                    </div>
-                    <div class="buttons pull-right">
-                        @if (order.IsReturnRequestAllowed)
-                        {
-                            <a class="btn" href="@Url.Action("ReturnRequest", "ReturnRequest", new { id = order.Id })" rel="nofollow">
+			@foreach (var order in Model.Orders)
+			{
+				<fieldset class="order-item clearfix">
+					<legend class="title">@T("Account.CustomerOrders.OrderNumber"): @order.OrderNumber</legend>
+					<div class="info pull-left">
+						<dl class="dl-horizontal" style="margin-top: 0">
+							<dt>@T("Account.CustomerOrders.OrderStatus"):</dt>
+							<dd>@order.OrderStatus</dd>
+							<dt>@T("Account.CustomerOrders.OrderDate"):</dt>
+							<dd>@order.CreatedOn.ToString()</dd>
+							<dt>@T("Account.CustomerOrders.OrderTotal"):</dt>
+							<dd>@order.OrderTotal</dd>
+						</dl>
+					</div>
+					<div class="buttons pull-right">
+						@if (order.IsReturnRequestAllowed)
+						{
+							<a class="btn" href="@Url.Action("ReturnRequest", "ReturnRequest", new { id = order.Id })" rel="nofollow">
 								<i class="fa fa-reply"></i>
-                                @T("Account.CustomerOrders.ReturnItems")
-                            </a>
-                            <text>&nbsp;&nbsp;&nbsp;</text>
-                        }
+								@T("Account.CustomerOrders.ReturnItems")
+							</a>
+							<text>&nbsp;&nbsp;&nbsp;</text>
+						}
 						<a class="btn" href="@Url.Action("Details", "Order", new { id = order.Id })" rel="nofollow">
 							<i class="fa fa-list-alt"></i>
 							@T("Account.CustomerOrders.OrderDetails")
 						</a>
-                    </div>
-                </fieldset>
-                }
-            }
-            else
-            {
-                <span class="muted">
-                    @T("Account.CustomerOrders.NoOrders")
-                </span>
-            }
+					</div>
+				</fieldset>
+			}
         </div>
+
+		@Html.SmartStore().Pager(Model.Orders).Name("orders-paginator").Action("Orders", "Customer")
     </div>
 </div>
